--- a/_posts/2024-10-04-tutorial.md
+++ b/_posts/2024-10-04-tutorial.md
@@ -3,14 +3,14 @@ layout: post
 title:  "Predicting the Future with Linear Regression"
 date: 2024-10-04
 author: Devan Gwynn
-description: "A tutorial on using linear regression to make predictions"
+description: "A tutorial on linear regression, including exploratory data analysis, variable selection, and making predictions"
 ---
 
 <p class="intro"><span class="dropcap">H</span>ave you ever wanted to predict the future? Well, using linear regression, you can! In this post, I will walk through the steps to construct a linear model in R and then use that model to make predictions.</p>
 
 ### What is linear regression?
 
-Linear regression is a method used in statistics to model a linear relationship between a depdendent variable and one or more independent variables, which can then be used to make predictions about future data. Thus, it is considered one of the simplest forms of supervised machine learning, in which the model learns by evaluating labeled data. When more than one predictor variable is used, it is called multiple linear regression, but the same ideas apply as in the simple (single predictor variable) case. The model is constructed by calculating coefficients for each predictor that will minimize the error between its prediction for the response variable and the actual value. There are a lot of mathematical concepts behind this idea that I will not go over, but more information on linear regression as a whole can be found <a href="https://en.wikipedia.org/wiki/Linear_regression" target="_blank">here</a>.
+Linear regression is a method used in statistics to model a linear relationship between a dependent variable and one or more independent variables, which can then be used to make predictions about future data. Thus, it is considered one of the simplest forms of supervised machine learning, in which the model learns by evaluating labeled data. When more than one predictor variable is used, it is called multiple linear regression, but the same ideas apply as in the simple (single predictor variable) case. The model is constructed by calculating coefficients for each predictor that will minimize the error between its prediction for the response variable and the actual value. There are a lot of mathematical concepts behind this idea that I will not go over, but more information on linear regression as a whole can be found <a href="https://en.wikipedia.org/wiki/Linear_regression" target="_blank">here</a>.
 
 ### Multiple linear regression steps
 
@@ -79,14 +79,14 @@ giving the following output:
 Once we have our initial model, how do we know which of our predictor variables to include? There are several different variable selection procedures that can be used to determine this.
 
 #### Variable selection methods
-1. Best subsets <a href="https://www.statology.org/best-subset-selection/#:~:text=Best%20subset%20selection%20offers%20the%20following%20pros:%20It%E2%80%99s" target="_blank">(More info)</a>
-2. Stepwise <a href="https://www.statology.org/stepwise-selection/#:~:text=An%20alternative%20to%20best%20subset%20selection%20is%20known" target="_blank">(More info)</a>
-    * Forward
-    * Backward
-3. Shrinkage methods
-    * Ridge* <a href="https://www.statology.org/ridge-regression/" target="_blank">(More info)</a>
-    * LASSO <a href="https://www.statology.org/lasso-regression/" target="_blank">(More info)</a>
-    * Elastic net
+1. **Best subsets** considers all possible subsets of the variables and selects the one with the best value for a given selection criteria <a href="https://www.statology.org/best-subset-selection/#:~:text=Best%20subset%20selection%20offers%20the%20following%20pros:%20It%E2%80%99s" target="_blank">(More info)</a>
+2. **Stepwise** <a href="https://www.statology.org/stepwise-selection/#:~:text=An%20alternative%20to%20best%20subset%20selection%20is%20known" target="_blank">(More info)</a>
+    * *Forward selection* starts with an empty set of variables and progressively adds variables to the model one by one based on what improves a given selection criteria the most
+    * *Backward selection* starts with the full set of variables and progressively removes variables from the model one by one based on what improves a given selection criteria the most
+3. **Shrinkage methods**
+    * *Ridge* uses an L2 penalty term that "shrinks" variable coefficients* <a href="https://www.statology.org/ridge-regression/" target="_blank">(More info)</a>
+    * *LASSO* uses an L1 penalty term that "shrinks" variable coefficients (sometimes down to zero) <a href="https://www.statology.org/lasso-regression/" target="_blank">(More info)</a>
+    * *Elastic net* is a combination of ridge and LASSO <a href="https://en.wikipedia.org/wiki/Elastic_net_regularization" target="_blank">(More info)</a>
 
 *Ridge regression is technically not a variable selection method since it shrinks coefficients but does not reduce any to zero.
 
@@ -144,12 +144,12 @@ Since the main point of this post is using linear regression for predictions, we
 
 ### Step 5: Use the model for inference and predictions
 
-Now, the moment you've all been waiting for--predicting the future! Once we have checked the validity of the model's assumptions, we can now use it for inference and to make predictions. A brief explanation of the difference between confidence intervals and prediction intervals:
+Now, the moment you've all been waiting for--predicting the future! Once we have checked the validity of the model's assumptions, we can now use it for inference and predictions. I first want to provide a brief explanation of the difference between confidence intervals and prediction intervals:
 <dl>
   <dt>95% confidence interval</dt>
-  <dd>Provides a range of values that we are 95% confident contain the true mean of the response variable for specific values of the explanatory variables</dd>
+  <dd>Provides a range of values that we are 95% confident contains the true mean of the response variable for specific values of the explanatory variables</dd>
   <dt>95% prediction interval</dt>
-  <dd>Provides a range of values that we are 95% confident contain the true value of the response variable for specific values of the explanatory variables</dd>
+  <dd>Provides a range of values that we are 95% confident contains the true value of the response variable for specific values of the explanatory variables</dd>
 </dl>
 
 Therefore, a prediction interval will always be wider than its corresponding confidence interval because there is more uncertainty.
