Finish writing post

--- a/_posts/2024-11-13-eda.md
+++ b/_posts/2024-11-13-eda.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "[INSERT TITLE HERE]"
+title:  "Fall Fanatics: Analyzing Fall College Sports"
 date: 2024-11-13
 author: Devan Gwynn
 description: "A brief look at which colleges have had the best performance in football, women's soccer, and women's volleyball so far this year"
@@ -10,7 +10,7 @@ description: "A brief look at which colleges have had the best performance in fo
 
 ### Introduction
 
-I have always loved college sports, and the fall has three of my favorites: football, women's soccer, and women's volleyball. BYU has traditionally had quite successful women's soccer and women's volleyball teams, but the football team has been hit and miss. However, this year, they have been dominant. There are several other colleges that have very prestigious athletic programs, such as UCLA and Penn State. This made me curious--how does BYU stack up against other colleges, particularly those in Power Four conferences (ACC, Big Ten, Big 12, and SEC), in these three sports? I decided to gather some data and see what I could find out.
+I have always loved college sports, and the fall has three of my favorites: football, women's soccer, and women's volleyball. BYU has traditionally had quite successful women's soccer and women's volleyball teams, but the football team has been hit and miss in recent years. However, this year they have been dominant. There are several other colleges that have very prestigious athletic programs, such as UCLA and Penn State. This made me curious--how does BYU stack up against other colleges, particularly those in Power Four conferences (ACC, Big Ten, Big 12, and SEC), in these three sports? I decided to gather some data and see what I could find out.
 
 ### Obtaining the Data
 
@@ -20,20 +20,28 @@ Fortunately, obtaining the data I wanted was not very difficult. I followed thes
 3. Use the API to get query results
 4. Parse query results
 
-The API I used is called <a href="https://github.com/henrygd/ncaa-api" target="_blank">ncaa-api</a>. Seeing as this is a public API with no API key required, there were no concerns about ethics being violated. The format is very straightforward--you simply set up the desired endpoint using the URL of the NCAA webpage containing the data you want. For example, the endpoint I used (Stats) was reached using the following code:
+The API I used is called <a href="https://github.com/henrygd/ncaa-api" target="_blank">ncaa-api</a>. Seeing as this is a public API with no API key required, there were no concerns about ethics being violated. The format is very straightforward--you simply set up the desired endpoint using the URL of the NCAA webpage containing the data you want. Each table had several pages, so these were looped through, gathering the data from each page individually. The results were returned in a JSON format, which I then parsed and organized into a DataFrame, leaving me with a DataFrame from each page. These were stacked into a single DataFrame containing all the stats from a given endpoint, leaving me with a DataFrame containing various statistics for each sport. I then joined all DataFrames within a given sport by team, giving me a DataFrame containing all team stats of interest for each sport. Finally, each of these DataFrames were joined together by team, creating my overall DataFrame containing all colleges with their team stats for each sport they play. Here is an example code chunk of obtaining the offensive hitting percentage data from each page and combining it into a single DataFrame:
 
 {%- highlight python -%}
+base_url = "https://ncaa-api.henrygd.me"
+pages = ["/stats/volleyball-women/d1/current/team/45"] + [f"/stats/volleyball-women/d1/current/team/45/p{i}" for i in range(2, 8)]
 
+dfs = []
+for page in pages:
+    url = base_url + page
+    response = requests.get(url)
+    df = pd.DataFrame(response.json())
+    df = pd.concat([df.drop(["sport", "title", "updated", "page", "pages", "data"], axis=1), df["data"].apply(pd.Series)], axis=1)
+    dfs.append(df)
+
+hitting_pct_df = pd.concat(dfs)
 {%- endhighlight -%}
 
-I then added onto the end the sport and which specific stat I wanted. Each one had several pages, so these were looped through, gathering the data from each page individually. The results were returned in a JSON format, which I then parsed and organized into a DataFrame, leaving me with a DataFrame from each page. These were stacked into a single DataFrame containing all the stats from a given endpoint, leaving me with a DataFrame containing various statistics for each sport. I then joined all DataFrames within a given sport by team, giving me a DataFrame containing all team stats of interest for each sport. Finally, each of these DataFrames were joined together by team, creating my overall DataFrame containing all colleges with their team stats for each sport they play. Here is an example code chunk of obtaining the
-
-The full code for this process can be found in <a href="[Insert reference here]" target="_blank">this</a> GitHub repository, along with the resulting data.
-
+The full code for this process can be found in <a href="https://github.com/ThunderUp2002/data-curation" target="_blank">this</a> GitHub repository, along with the resulting data.
 
 ### Digging into the Data
 
-Once I finished cleaning the data, I was ready to start analyzing it! For this analysis, I decided to keep the process fairly basic, simply selecting one metric from each sport that I believe roughly shows a team's performance. Below is each statistic with a brief definition for those who are unfamiliar with any of them.
+Once I finished cleaning the data, I was ready to start exploring it! For this analysis, I decided to keep the process fairly basic, simply selecting one metric from each sport that I believe roughly shows a team's performance. Below is each statistic with a brief definition for those who are unfamiliar with any of them.
 
 <dl>
   <dt>Average Score</dt>
@@ -44,27 +52,42 @@ Once I finished cleaning the data, I was ready to start analyzing it! For this a
   <dd>In soccer, this is the average number of goals you score (or allow) per game</dd>
 </dl>
 
-To account for both offense and defense, I took the difference between each team's statistic and their opponents' average, yielding a +/- differential for each one. The first thing you might observe is that the chosen stats from each of these sports are not directly comparable. To remedy this, I calculated the z-score for each statistic. If you are unfamiliar with what that is, it simply standardizes statistics on different scales using each one's mean and standard deviation, which makes it possible to compare one to the other fairly. After calculating these, I was interested to look at each sport's distribution of z-scores.
+To account for both offense and defense, I took the difference between each team's statistic and their opponents' average, yielding a differential (+/-) for each one. The first thing you might observe is that the chosen stats from each of these sports are not directly comparable. To remedy this, I calculated the z-score for each statistic. We will now look at an overview of the data.
 
-#### Brief summary of each individual sport (summary stats and maybe one graphic)
-*Overview/summary statistics (tables)
+#### Overview
 
-| Sport       | Sample Size |
-| ----------- | ----------- |
-| Football      | Title       |
-| W Volleyball   | Text        |
-| W Soccer      | Title       |
-| ----------- | ----------- |
-| Total   | Text        |
+Here is a table summary of the data (separated by sport):
 
+| Sport        | Sample Size | Metric Value Mean | Metric Value SD |
+| ------------ | ----------- | ----------------- | --------------- |
+| Football     | 133         | 3.03              | 11.36           |
+| W Volleyball | 333         | 0.004             | 0.06            |
+| W Soccer     | 339         | 0.03              | 0.95            |
+| **Total**    | **356**     |                   |                 |
 
-#### Overall
-*Filter to only those with all three sports as well
+*Notes*: The metric value corresponds to the given sport (as discussed above). Additionally, the row containing the totals is based on the final dataset (after combining sports so each row contains one team), thus the sample size of 356.
 
-Since part of this analysis is specifically focused on which college had the best performance across all three sports, I took a look at the results when only considering colleges with a team for each sport.
+Also of interest is the distribution of average z-scores (calculated using the z-score of each available metric for each team):
 
-[Insert graphics/tables]
+<figure>
+	<img src="{{site.url}}/{{site.baseurl}}/assets/img/2024-11-13-eda/Distribution of Average z_Scores.png" alt=""> 
+</figure>
 
+As can be seen by the graph, the distribution is roughly symmetric and centered at about 0, although there is a fairly long left tail due to a few extreme negative average z-scores.
+
+#### Most Successful Overall
+
+Since one of the goals of this analysis is to determine which college has had the best performance across all three sports, I looked at the results when only considering colleges with a team for each sport. Here is a list of the top five schools and their stats:
+
+| College    | +/- GPG | +/- Hitting % | +/- PPG | Average z-Score |
+| ---------- | ------- | ------------- | ------- | --------------- |
+| Pittsburgh | 0.998   | 0.227         | 11.59   | 1.86            |
+| Texas      | 1.386   | 0.073         | 26.79   | 1.57            |
+| Arkansas   | 2.896   | 0.041         | 6.67    | 1.32            |
+| Penn St.   | 1.003   | 0.101         | 17.2    | 1.31            |
+| Notre Dame | 1.611   | -0.024        | 27.19   | 1.11            |
+
+Notably, the top three teams have all been ranked in the top five for most of the season in at least one of these sports (Pittsburgh in volleyball, Texas in football, and Arkansas in soccer, which can clearly be seen by their metrics in each, respectively). Additionally, Penn St. and Notre Dame have been dominant in football, as evidenced by their large point differential. Surprisingly, Notre Dame has a negative value for hitting percentage differential, which is the only negative value among these schools. However, their success in soccer and football lift them past that shortcoming in volleyball. Another interesting observation is that each of these teams is in a Power Four conference.
 
 #### Power Four Conferences
 
@@ -74,28 +97,45 @@ For those unfamiliar with Power Four conferences, you can think of them as the m
 * <a href="https://big12sports.com/" target="_blank">Big 12</a>
 * <a href="https://www.secsports.com/" target="_blank">SEC</a>
 
-A couple of notable items regarding Power Four conferences:
-* Surprisingly, Georgia Tech is the only college in a Power Four Conference that does not sponsor a women's soccer team
+A few things to note regarding these sports in Power Four conferences:
+* Georgia Tech is the only college in a Power Four conference that does not have a women's soccer team
+* Vanderbilt is the only college in a Power Four conference that does not have a women's volleyball team (although they will have one starting in 2025)
 * Notre Dame is a member of the ACC for all sports except football, but for the simplicity of this analysis, they were included in the ACC for football
 
-[Insert necessary graphics/tables]
+| Conference  | +/- GPG | +/- Hitting % | +/- PPG | Average z-Score |
+| ----------- | ------- | ------------- | ------- | --------------- |
+| ACC         | 0.72    | 0.04          | 6.12    | 0.51            |
+| Big Ten     | 0.36    | 0.03          | 5.58    | 0.36            |
+| Big 12      | 0.35    | 0.03          | 4.53    | 0.31            |
+| SEC         | 0.7     | 0.04          | 10.23   | 0.64            |
 
-| Conference  | Average Score +/- | Average z-Score | Average Hit % +/- | Average z-Score | Average GPG +/- | Average z-Score |
-| ----------- | ----------------- | --------------- | ----------------- | --------------- | --------------- | --------------- |
-| ACC         | Title             |                 |                   |                 |                 |                 |
-| Big Ten     | Text              |                 |                   |                 |                 |                 |
-| Big 12      | Title             |                 |                   |                 |                 |                 |
-| SEC         |                   |                 |                   |                 |                 |                 |
-| ----------- | ----------------- | --------------- | ----------------- | --------------- | --------------- | --------------- |
-| Total       | Text              |                 |                   |                 |                 |                 |
+The table shows about what we would expect: ACC and SEC being best in soccer and football, while the spread in volleyball is much tighter. Based on these statistics, the SEC is the best conference overall in these three sports, followed by the ACC, the Big Ten, and finally the Big 12.
 
+Upon further investigation, this graph reveals some aspects of average z-score by conference:
+
+<figure>
+	<img src="{{site.url}}/{{site.baseurl}}/assets/img/2024-11-13-eda/Average z_Score Distribution by Conference.png" alt=""> 
+</figure>
+
+The SEC and ACC appear to be fairly balanced conferences in these sports, with less disparity in skill among their teams displayed by the roughly symmetric distribution. On the other hand, the Big Ten and Big 12 appear to be somewhat imbalanced, as can be seen by the odd bulges in their distributions.
 
 #### BYU
 
-Finally, we'll take a quick look at BYU's stats for each of these sports and how they compare to other teams in Power Four conferences.
+Finally, we'll take a quick look at BYU's stats for each sport and each one's overall ranking, ranking among colleges with all three teams, and conference ranking (with parentheses next to each indicating how many total colleges fall under that category).
 
-[Insert necessary graphics/tables]
+| Ranking                     | +/- GPG     | +/- Hitting % | +/- PPG    | Average z-Score |
+| --------------------------- | ----------- | ------------- | ---------- | --------------- |
+| BYU                         | 0.4         | 0.072         | 13.92      | 0.84            |
+| Overall                     | 113 *(339)* | 39 *(333)*    | 18 *(133)* | 40 *(356)*      |
+| Colleges w/ 3 teams *(128)* | 58          | 24            | 17         | 19              |
+| Big 12 *(16)*               | 9           | 4             | 1          | 4               |
+
+As the table shows, BYU has performed best in football, followed by volleyball, and then soccer. In terms of performance across all three sports, they have performed fairly well compared to other colleges, especially within the Big 12, in which they are in the upper quartile of the ranking.
 
 ### Conclusion
 
-The code containing my analysis can be found in <a href="[Insert reference here]" target="_blank">this</a> GitHub repository.
+All in all, we have discovered that the most dominant teams in each sport have also performed well enough to be in the top five for performance across all sports. The ACC and SEC are most successful in soccer and football and are also more balanced compared to the Big Ten and Big 12. The SEC has had the best performance across all three sports among Power Four conferences. And finally, BYU is having a phenomenal football season, leading their conference in average point differential. Go Cougs!
+
+With the college basketball season just now starting, it's a perfect time to give this a try! You can use the same API I did to gather similar data for basketball, and then perform a similar analysis. Let me know what you find!
+
+The code containing my analysis can be found in <a href="https://github.com/ThunderUp2002/data-curation" target="_blank">this</a> GitHub repository.
