Fix figures not displaying

--- a/_posts/2024-11-13-eda.md
+++ b/_posts/2024-11-13-eda.md
@@ -70,7 +70,7 @@ Here is a table summary of the data (separated by sport):
 Also of interest is the distribution of average z-scores (calculated using the z-score of each available metric for each team):
 
 <figure>
-	<img src="{{site.url}}/{{site.baseurl}}/assets/img/2024-11-13-eda/Distribution of Average z_Scores.png" alt=""> 
+	<img src="{{site.url}}/{{site.baseurl}}/assets/img/2024-11-13-eda/distribution-of-average-z-scores.png" alt=""> 
 </figure>
 
 As can be seen by the graph, the distribution is roughly symmetric and centered at about 0, although there is a fairly long left tail due to a few extreme negative average z-scores.
@@ -114,7 +114,7 @@ The table shows about what we would expect: ACC and SEC being best in soccer and
 Upon further investigation, this graph reveals some aspects of average z-score by conference:
 
 <figure>
-	<img src="{{site.url}}/{{site.baseurl}}/assets/img/2024-11-13-eda/Average z_Score Distribution by Conference.png" alt=""> 
+	<img src="{{site.url}}/{{site.baseurl}}/assets/img/2024-11-13-eda/average-z-score-distribution-by-conference.png" alt=""> 
 </figure>
 
 The SEC and ACC appear to be fairly balanced conferences in these sports, with less disparity in skill among their teams displayed by the roughly symmetric distribution. On the other hand, the Big Ten and Big 12 appear to be somewhat imbalanced, as can be seen by the odd bulges in their distributions.
